2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-07-07  Calum Benson  <calum.benson@sun.com>

	* visual-bell.png:
	Replace Bill's placeholder icon before the UI freeze :)

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

Fri Jun  6 19:16:43 2003  Jonathan Blandford  <jrb@gnome.org>

	* sound-properties-capplet.c (bell_flash_to_widget),
	(bell_flash_from_widget): Use a peditor for the visual bell
	instead.

2003-06-06  Bill Haneman <bill.haneman@sun.com>

	* sound-properties.glade:
	Added page tab and UI from "visual bell" capplet
	(UI originally from Calum, except for ugly icon)

	* visual-bell.png:
	Ugly new icon which needs TLC from Calum.

	* sound-properties-capplet.c:
	Added gconf keys for visual bell feature and control of
	audio bell.
	(visual_bell_type_changed): New, called when visual bell radiobuttons
	are toggled.
	(create_dialog): 
	Set the image on the "System Bell" notebook tab. 
	(setup_dialog):
	Added peditors for visual-bell and audio-bell checkboxes/gconf keys.
	Added guards for the visual-bell type buttons, controlled by
	the visual-bell-enabling checkbox.
	Connected visual_bell_type_changed to "toggled" signal on radiobuttons.

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-04-30  Alex Duggan  <aldug@astrolinux.com>

	* sound-properties-capplet.c: use appropriate
	window border icon.

2003-04-29  Kjartan Maraas  <kmaraas@gnome.org>

	* sound-properties-capplet.c: (main): Plug a leak.

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2
