@@ -1,3 +1,8 @@
+2003-07-11  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* sound-properties.glade, sound-properties-capplet.c:  
+	More fixes for ui-review bug number 99533.
+	
 2003-07-07  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.3.4
